--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
     <div class="container">
         <h1 class="mbr-section-title mbr-fonts-style align-right mbr-bold mbr-white display-1">TRAINEE UTIC 2020</h1>
         <h3 class="mbr-section-subtitle mbr-fonts-style align-right mbr-white mbr-light display-2"><strong>
-            ATENÇÃO!.<br> O PS UTIC 2020 FOI ADIADO POR QUESTÕES DE INSFRAESTRUTURA.<br> UMA NOVA DATA SERÁ CONFIRMADA EM BREVE VIA EMAIL.</strong></h3>
+            ATENÇÃO!<br> O PS UTIC 2020 FOI ADIADO POR QUESTÕES DE INSFRAESTRUTURA<br> UMA NOVA DATA SERÁ CONFIRMADA EM BREVE.</strong></h3>
         
         <div class="mbr-section-btn align-right"><a class="btn btn-md btn-primary display-4" href="index.html#content19-e">
                 SAIBA MAIS</a></div>
